# deadpool

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  WORKSPACE_REMOVAL.md  WORKSPACE_SPLIT.md  cargo-all.sh  check-reexports.sh  ci.jsonnet  gen-ci.sh  release-manager.sh  test-individual-builds.ps1
.devcontainer/: .dockerignore  Dockerfile  compose.yml  devcontainer.json  post-create.sh
.github/workflows/: ci.yml  deadpool-diesel.yml  deadpool-lapin.yml  deadpool-libsql.yml  deadpool-memcached.yml  deadpool-postgres.yml  deadpool-r2d2.yml  deadpool-redis.yml  deadpool-runtime.yml  deadpool-sqlite.yml  deadpool-sync.yml  deadpool.yml
crates/: test-integrations.sh
crates/deadpool/: CHANGELOG.md  Cargo.toml  README.md  ci.config.yml
crates/deadpool-diesel/: CHANGELOG.md  Cargo.toml  README.md
crates/deadpool-diesel/src/: manager.rs
crates/deadpool-diesel/tests/: basics.rs
crates/deadpool-lapin/: CHANGELOG.md  Cargo.toml  README.md  ci.config.yml
crates/deadpool-lapin/src/: config.rs  lib.rs
crates/deadpool-libsql/: CHANGELOG.md  Cargo.toml  README.md
crates/deadpool-libsql/src/: config.rs
crates/deadpool-libsql/tests/: libsql.rs
crates/deadpool-memcached/: CHANGELOG.md  Cargo.toml  README.md
crates/deadpool-memcached/src/: config.rs  lib.rs
crates/deadpool-memcached/tests/: basic.rs
crates/deadpool-postgres/: CHANGELOG.md  Cargo.toml  README.md  check_api_leaks.py  ci.config.yml
crates/deadpool-postgres/src/: config.rs  lib.rs  statement_cache.rs
crates/deadpool-postgres/tests/: async_trait.rs  postgres.rs
crates/deadpool-r2d2/: CHANGELOG.md  Cargo.toml  README.md
crates/deadpool-r2d2/src/: lib.rs  manager.rs
crates/deadpool-redis/: CHANGELOG.md  Cargo.toml  README.md  ci.config.yml
crates/deadpool-redis/src/: config.rs  lib.rs
crates/deadpool-redis/src/cluster/: config.rs  mod.rs
crates/deadpool-redis/src/sentinel/: config.rs  mod.rs
crates/deadpool-redis/tests/: redis.rs  redis_cluster.rs  redis_connection_config.rs  redis_sentinel.rs
crates/deadpool-runtime/: CHANGELOG.md  Cargo.toml  README.md
crates/deadpool-runtime/src/: lib.rs
crates/deadpool-sqlite/: CHANGELOG.md  Cargo.toml  README.md
crates/deadpool-sqlite/src/: config.rs  lib.rs
crates/deadpool-sync/: CHANGELOG.md  Cargo.toml  README.md
crates/deadpool-sync/src/: lib.rs
crates/deadpool/benches/: managed.rs  unmanaged.rs
crates/deadpool/src/: lib.rs  util.rs
crates/deadpool/src/managed/: builder.rs  config.rs  hooks.rs  manager.rs  object.rs  pool.rs  reexports.rs
crates/deadpool/src/unmanaged/: config.rs  errors.rs  mod.rs
crates/deadpool/tests/: managed_config.rs  managed_deadlock.rs  managed_timeout.rs  managed_unreliable_manager.rs  unmanaged_timeout.rs
deadpool/: Cargo.toml
diesel/: Cargo.toml
examples/diesel/: Cargo.toml
examples/postgres-actix-web/: Cargo.toml
examples/postgres-axum/: Cargo.toml
examples/postgres-benchmark/: Cargo.toml
examples/redis-actix-web/: Cargo.toml
lapin/: Cargo.toml
libsql/: CHANGELOG.md  Cargo.toml  README.md
libsql/src/: config.rs  lib.rs
libsql/tests/: libsql.rs
memcached/: Cargo.toml
postgres/: Cargo.toml  README.md
postgres/src/: auth.rs  aws.rs  config.rs  generic_client.rs  lib.rs
postgres/tests/: postgres.rs
r2d2/: Cargo.toml
redis/: Cargo.toml
redis/src/: config.rs  lib.rs
redis/src/cluster/: config.rs
redis/src/sentinel/: config.rs
runtime/: Cargo.toml
sqlite/: CHANGELOG.md  Cargo.toml
src/managed/: mod.rs
sync/: Cargo.toml
tools/: check-reexported-features.sh
tools/release-manager/: Cargo.toml  README.md
tools/release-manager/src/: main.rs
