[package]
name = "deadpool-diesel"
version = "0.6.1"
edition = "2024"
rust-version = "1.85"
authors = ["Michael P. Jung <michael.jung@terreon.de>"]
description = "Dead simple async pool for diesel"
keywords = ["async", "database", "pool", "diesel"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/deadpool-rs/deadpool"
readme = "README.md"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = ["rt_tokio_1", "with-deprecated", "32-column-tables"]
mysql = ["diesel/mysql"]
postgres = ["diesel/postgres"]
sqlite = ["diesel/sqlite"]
rt_tokio_1 = ["deadpool/rt_tokio_1"]
rt_async-std_1 = ["deadpool/rt_async-std_1"]
serde = ["deadpool/serde"]
tracing = ["deadpool-sync/tracing"]

# Re-export of diesel features
128-column-tables = ["diesel/128-column-tables"]
32-column-tables = ["diesel/32-column-tables"]
64-column-tables = ["diesel/64-column-tables"]
__with_asan_tests = ["diesel/__with_asan_tests"]
chrono = ["diesel/chrono"]
extras = ["diesel/extras"]
huge-tables = ["diesel/huge-tables"]
ipnet-address = ["diesel/ipnet-address"]
large-tables = ["diesel/large-tables"]
mysql_backend = ["diesel/mysql_backend"]
network-address = ["diesel/network-address"]
postgres_backend = ["diesel/postgres_backend"]
numeric = ["diesel/numeric"]
returning_clauses_for_sqlite_3_35 = ["diesel/returning_clauses_for_sqlite_3_35"]
serde_json = ["diesel/serde_json"]
time = ["diesel/time"]
unstable = ["diesel/unstable"]
uuid = ["diesel/uuid"]
with-deprecated = ["diesel/with-deprecated"]
without-deprecated = ["diesel/without-deprecated"]

[dependencies]
deadpool = { path = "../deadpool", version = "0.13.0", default-features = false, features = [
    "managed",
] }
deadpool-sync = { path = "../deadpool-sync", version = "0.2" }
diesel = { version = "2.2.3", default-features = false }

[dev-dependencies]
diesel = { version = "2.2.3", default-features = false, features = ["sqlite"] }
tokio = { version = "1.0", features = ["macros", "rt", "rt-multi-thread"] }
