[package]
name = "deadpool-lapin"
version = "0.13.1"
edition = "2024"
rust-version = "1.88"
authors = ["Michael P. Jung <michael.jung@terreon.de>"]
description = "Dead simple async pool for lapin"
keywords = ["async", "lapin", "pool", "amqp", "rabbitmq"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/deadpool-rs/deadpool"
readme = "README.md"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = ["rt_tokio_1"]
rt_tokio_1 = ["deadpool/rt_tokio_1", "lapin/tokio", "async-rs/tokio"]
rt_smol_2 = ["deadpool/rt_smol_2", "lapin/smol", "async-rs/smol"]
serde = ["deadpool/serde", "dep:serde"]

# Re-export of lapin features
codegen = ["lapin/codegen"]
codegen-internal = ["lapin/codegen-internal"]
default-runtime = ["lapin/default-runtime"]
hickory-dns = ["lapin/hickory-dns"]
native-tls = ["lapin/native-tls"]
openssl = ["lapin/openssl"]
rustls = ["lapin/rustls"]
rustls--aws_lc_rs = ["lapin/rustls--aws_lc_rs"]
rustls--ring = ["lapin/rustls--ring"]
rustls-native-certs = ["lapin/rustls-native-certs"]
rustls-webpki-roots-certs = ["lapin/rustls-webpki-roots-certs"]
vendored-openssl = ["lapin/vendored-openssl"]

[dependencies]
async-rs = { version = "0.8", default-features = false }
deadpool = { path = "../deadpool", version = "0.13.0", default-features = false, features = [
    "managed",
] }
lapin = { version = "4", default-features = false }
serde = { package = "serde", version = "1.0.103", features = [
    "derive",
], optional = true }
thiserror = "2.0.12"

[dev-dependencies]
config = { version = "0.15", features = ["json"] }
dotenvy = "0.15"
tokio = { version = "1.0", features = ["sync", "macros", "rt-multi-thread"] }
