[package]
name = "deadpool-redis"
version = "0.22.1"
edition = "2024"
rust-version = "1.85"
authors = [
    "Michael P. Jung <michael.jung@terreon.de>",
    "Subeom Choi <subumm1@gmail.com>",
]
description = "Dead simple async pool for redis"
keywords = ["async", "redis", "pool"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/deadpool-rs/deadpool"
readme = "README.md"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = ["rt_tokio_1"]
rt_tokio_1 = ["deadpool/rt_tokio_1", "tokio-comp"]
rt_smol_2 = ["deadpool/rt_smol_2", "smol-comp"]
serde = ["deadpool/serde", "dep:serde"]

# Re-export of redis features
acl = ["redis/acl"]
ahash = ["redis/ahash"]
bigdecimal = ["redis/bigdecimal"]
cache-aio = ["redis/cache-aio"]
cluster = ["redis/cluster-async"]
cluster-async = ["cluster"]
connection-manager = ["redis/connection-manager"]
geospatial = ["redis/geospatial"]
json = ["redis/json"]
num-bigint = ["redis/num-bigint"]
rust_decimal = ["redis/rust_decimal"]
script = ["redis/script"]
sentinel = ["redis/sentinel", "dep:tokio", "tokio/sync"]
smol-comp = ["redis/smol-comp"]
smol-native-tls-comp = ["redis/smol-native-tls-comp"]
smol-rustls-comp = ["redis/smol-rustls-comp"]
streams = ["redis/streams"]
tls-native-tls = ["redis/tls-native-tls"]
tls-rustls = ["redis/tls-rustls"]
tls-rustls-insecure = ["redis/tls-rustls-insecure"]
tls-rustls-webpki-roots = ["redis/tls-rustls-webpki-roots"]
tokio-comp = ["redis/tokio-comp"]
tokio-native-tls-comp = ["redis/tokio-native-tls-comp"]
tokio-rustls-comp = ["redis/tokio-rustls-comp"]
uuid = ["redis/uuid"]
vector-sets = ["redis/vector-sets"]

[dependencies]
deadpool = { path = "../deadpool", version = "0.13.0", default-features = false, features = [
    "managed",
] }
redis = { version = "1.0.3", default-features = false, features = ["aio"] }
serde = { package = "serde", version = "1.0", features = [
    "derive",
], optional = true }
tokio = { version = "1.6", default-features = false, optional = true }

[dev-dependencies]
config = { version = "0.15", features = ["json"] }
dotenvy = "0.15.0"
futures = "0.3.15"
redis = { version = "1", default-features = false, features = ["tokio-comp"] }
tokio = { version = "1.6", features = ["macros", "rt-multi-thread", "sync"] }
