[package]
name = "example-postgres-axum"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.8.1", features = ["json"] }
thiserror = "2.0"
tokio = { version = "1.27", features = ["macros", "rt-multi-thread"] }
deadpool-postgres = { path = "../../postgres", features = ["serde"] }
tokio-postgres = { version = "0.7.9", features = ["with-uuid-1"] }
dotenvy = "0.15"
uuid = { version = "1", features = ["serde"] }
serde = { version = "1.0.145", features = ["derive"] }
config = "0.15"
axum-macros = "0.5"
